# anti-afk-rocket-rs

./: .gitignore  Cargo.toml  README.md  Rocket.toml  build.rs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/: index.ts  style.css
src/: key_handler.rs  main.rs  main_page.rs  static_files.rs
src/api/: close.rs  key_handler.rs  mod.rs  presskey.rs  repeatkey.rs
src/key_handler/: mod.rs
src/setup/: figments.rs  mod.rs  static_files.rs  templates.rs
src/setup/static/: style.css
templates/: index.html  index.html.tera  index.js  press-key.html.tera  repeat-key.html.tera
