[package]
name = "anti-afk-rocket-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = { version = "0.1.2", default-features = false }

rocket = { version = "0.5.0-rc.3", default-features = false }
rocket_dyn_templates = { version = "0.1.0-rc.3", default-features = false, features = [
    "tera",
] }
webbrowser = { version = "0.8.11", default-features = false }

[profile.release]
strip = true # Automatically strip symbols from the binary

opt-level = "z"

lto = true        # Enable link time optimization
debug = false     # Controls the amount of debug information
codegen-units = 1 # Maximize speed and size reduction optimization
